# dp-ao-communication

./: .gitignore  AUTHORS.md  Makefile  README.md  bsdlab_native.ini  meson.build  run.bat
ao_comm/: ao_to_lsl.cpp  ao_to_lsl.hpp  main.cpp  tcp_server.cpp  tcp_server.hpp
config/: AO_STREAM.CONFIG  general.toml
src/: AOStreamer.cpp  AOStreamer_bkp.cpp  AO_STREAM - Copy.CONFIG  ConfigReader.cpp  ConfigReader.h  helpers.cpp  helpers.h  receiver.cpp  receiver.h
src/include/: .gitignore
src/include/libAO/include/: AOTYPES.h  EthernetStandAlone.h
src/include/libAO/lib/: ethernetStandAlone_X64.lib
